Changes: - Optimizations around downloading to add Futures so that it can process quicker - Fixed the tidyup after all torrents have been downloaded - Cleanup some useless logging - Using the new virtual threads in Java 21